fixed spacing

--- a/index.css
+++ b/index.css
@@ -245,8 +245,8 @@ box-shadow: 0 0 10px 0 #3C747C inset, 0 0 10px 4px #3C747C;
 }
 
 .ml6 {
+    margin-top: 0.2em;
     position: relative;
-    font-family: botsmatic;
 }
 
 .ml6 .text-wrapper {
@@ -283,18 +283,18 @@ box-shadow: 0 0 10px 0 #3C747C inset, 0 0 10px 4px #3C747C;
 /* Typewriter-effect Animation*/
 
 .anim-typewriter1 {
-    animation: typewriter1 0.5s steps(15) 1s 1 normal both,
+    animation: typewriter1 0.5s steps(10) 1s 1 normal both,
     blinkTextCursor 500ms steps(40) infinite normal;
 }
 
 .anim-typewriter2 {
-    animation: typewriter2 2s steps(50) 1s 1 normal both,
+    animation: typewriter2 2s steps(40) 1s 1 normal both,
     blinkTextCursor 500ms steps(40) infinite normal;
     animation-delay: 3s;
 }
 
 .anim-typewriter3 {
-    animation: typewriter3 1.5s steps(30) 1s 1 normal both,
+    animation: typewriter3 1.5s steps(25) 1s 1 normal both,
     blinkTextCursor 500ms steps(40) infinite normal;
     animation-delay: 5s;
 }
